--- a/resources.qrc
+++ b/resources.qrc
@@ -6,5 +6,7 @@
         <file>img/spaceship.png</file>
         <file>img/ab.png</file>
         <file>img/background.png</file>
+        <file>img/barrier.png</file>
+        <file>sound/shoot.mp3</file>
     </qresource>
 </RCC>
