--- a/resources.qrc
+++ b/resources.qrc
@@ -15,5 +15,6 @@
         <file>img/yellow-alien-up.png</file>
         <file>img/cyan-alien-up.png</file>
         <file>img/green-alien-up.png</file>
+        <file>img/shield.png</file>
     </qresource>
 </RCC>
