--- a/mainWindow.ui
+++ b/mainWindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Space Invaders</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QGraphicsView" name="graphicsView">
@@ -34,7 +34,7 @@
      <x>0</x>
      <y>0</y>
      <width>799</width>
-     <height>20</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
